--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@
     --clr-blue:  #264653;
     --clr-light: #fff;
     --clr-dark: #303030;
+    --clr-black: black;
 
     --fs-h1: 4.5rem;
     --fs-h2: 3.75rem;
@@ -51,6 +52,11 @@ section {
 img {
     display: block;
     max-width: 100%;
+}
+
+:focus {
+    outline: 3px solid var(--clr-green);
+    outline-offset: 3px;
 }
 
 /* Typography */
@@ -99,13 +105,13 @@ strong {
     font-weight: var(--fw-extra-bold);
 }
 
-/* Header section */
+/* Header Section */
 
 .header-section {
     display: none;
 }
 
-/* Intro section */
+/* Intro Section */
 
 .intro-section {
     position: relative;
@@ -136,6 +142,70 @@ strong {
     left: -1.5em;
     width: calc(100% + 1.5em);
 }
+
+/* Services Section */
+
+.services-section {
+    background-color: var(--clr-blue);
+    color: var(--clr-light);
+    background-image: url(/img/services-bg.jpg);
+    background-size: cover;
+    background-blend-mode: multiply;
+    text-align: center;
+}
+
+.services {
+    display: flex;
+    column-gap: 1.5em;
+    padding: 0 5em;
+    margin-bottom: 4em;
+}
+
+/* .service + .service {
+    margin-left: 2em;
+} */
+
+.service {
+    flex-basis: 0;
+    flex-grow: 1;
+    min-width: 0;
+}
+
+.services--title {
+    color: var(--clr-green);
+    position: relative;
+}
+
+.services--title::after {
+    content: '';
+    display: block;
+    width: 2em;
+    height: 2px;
+    margin: 0.5em auto 1em;
+    background: var(--clr-light);
+    opacity: 0.25;
+}
+
+.work-btn {
+    display: inline-block;
+    padding: .5em 2.5em;
+    background: var(--clr-green);
+    color: var(--clr-black);
+    text-decoration: none;
+    cursor: pointer;
+    font-size: .8rem;
+    /* text-transform: uppercase; */
+    letter-spacing: 2px;
+    font-weight: var(--fw-extra-bold);
+    /* margin: 5em auto 0; */
+    transition: transform 200ms ease-in-out;
+}
+
+.work-btn:hover {
+    transform: scale(1.1);
+}
+
+
 
 
 /* RESPONSIVE MODE */
