--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@
 
 /* General Styles */
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: var(--clr-light);
     color: var(--clr-dark);
@@ -68,17 +72,11 @@ h3 {
     margin: 0;
 }
 
-h1 {
-    font-size: var(--fs-h1);
-}
+h1 { font-size: var(--fs-h1); }
 
-h2 {
-    font-size: var(--fs-h2);
-}
+h2 { font-size: var(--fs-h2); }
 
-h3 {
-    font-size: var(--fs-h3);
-}
+h3 { font-size: var(--fs-h3); }
 
 .section-title {
     margin-bottom: .25em;
@@ -93,7 +91,6 @@ h3 {
 .profile--subtitle {
     background-color: var(--clr-green);
     font-family: var(--ff-oswald);
-    /* margin-bottom: 1em; */
     padding: 0.25em 1em;
 }
 
@@ -101,15 +98,111 @@ h3 {
     font-weight: var(--fw-light);
 }
 
-strong {
-    font-weight: var(--fw-extra-bold);
-}
-
 /* Header Section */
 
 .header-section {
-    display: none;
+    display: flex;
+    justify-content: space-between;
+    padding: 1em 2em;
 }
+
+.logo {
+    max-width: 50px;
+}
+
+.nav {
+    position: fixed;
+    background: var(--clr-dark);
+    color: var(--clr-light);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
+}
+
+.nav--list {
+    height: 100%;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.nav--link {
+    color: inherit;
+    font-size: var(--fs-h2);
+    font-weight: var(--fw-bold);
+    text-decoration: none;
+}
+
+.nav--link:hover {
+    color: var(--clr-green);
+}
+
+.toggle-nav {
+    padding: .5em;
+    background: transparent;
+    border: 0;
+    position: absolute;
+    right: 1em;
+    top: 1em;
+    z-index: 1000;
+}
+
+.nav-open .nav {
+    transform: translateX(0);
+}
+
+.nav-open .toggle-nav {
+    position: fixed;
+}
+
+.nav-open .hamburger {
+    transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before {
+    transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after {
+    opacity: 0;
+}
+
+.hamburger {
+    display: block;
+    position: relative;
+    margin: .5em 3em 0 0;
+    margin: 1em;
+}
+
+.hamburger,
+.hamburger::before,
+.hamburger::after {
+    /* background: var(--clr-dark); */
+    background: var(--clr-green);
+    width: 2em;
+    height: 3px;
+    border-radius: 1em;
+    transition: transform 250ms ease-in-out;
+}
+
+.hamburger::before,
+.hamburger::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+}
+
+.hamburger::before { top: 6px; }
+.hamburger::after { bottom: 6px; }
 
 /* Intro Section */
 
@@ -133,6 +226,11 @@ strong {
     box-shadow: var(--bs);
 }
 
+strong {
+    font-weight: var(--fw-extra-bold);
+    color: var(--clr-green);
+}
+
 .intro--subtitle {
     align-self: start;
     grid-column: -1 / 1;
@@ -142,6 +240,8 @@ strong {
     left: -1.5em;
     width: calc(100% + 1.5em);
     margin-bottom: 2em;
+    text-transform: uppercase;
+    letter-spacing: .35rem;
 }
 
 /* Services Section */
@@ -196,10 +296,8 @@ strong {
     text-decoration: none;
     cursor: pointer;
     font-size: .8rem;
-    /* text-transform: uppercase; */
     letter-spacing: 2px;
     font-weight: var(--fw-extra-bold);
-    /* margin: 5em auto 0; */
     transition: transform 200ms ease-in-out;
 }
 
@@ -231,6 +329,7 @@ strong {
 .profile--title {
     grid-area: title;
     margin-left: .5em;
+    color: var(--clr-green);
 }
 
 .profile--subtitle {
@@ -241,12 +340,99 @@ strong {
     width: calc(100% + 1.5em);
     padding-left: 1em;
     padding-right: calc(200px + 4em);
-    background-color: var(--clr-sienna);
 }
 
 .profile--body {
     padding: 0 2em;
 }
+
+/* Portfolio Section */
+
+.portfolio-section {
+    background-color: var(--clr-blue);
+    color: var(--clr-light);
+    text-align: center;
+}
+
+.portfolio--subtitle {
+    color: var(--clr-green);
+    font-weight: var(--fw-bold);
+    margin-bottom: 2em;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    width: 80%;
+    margin: auto;
+}
+
+.projects--item {
+    background-color: var(--clr-green);
+    overflow: hidden;
+}
+
+.projects--img {
+    transition:
+        transform 750ms cubic-bezier(.5, 0, .5, 1),
+        opacity 250ms linear;
+}
+
+.projects--item:focus {
+    position:relative;
+    z-index: 2;
+}
+
+.projects--img:hover,
+.projects--item:focus .projects--img {
+    transform: scale(1.2);
+    opacity: .5;
+}
+
+/* Footer Section */
+
+.footer {
+    background: #111;
+    color: var(--clr-green);
+    text-align: center;
+    padding: 2.5em;
+    font-size: var(--fs-h3);
+}
+
+.footer a { 
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer--email-link {
+    font-weight: var(--fw-bold);
+}
+
+.footer--email-link:hover,
+.social-list--link:hover {
+    opacity: .7;
+}
+
+.footer--email-link:hover {
+    text-decoration: underline;
+}
+
+.social-list {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+}
+
+.social-list--item {
+    margin: 0 .5em;
+}
+
+.social-list--link {
+    padding: .5em;
+}
+
 
 /* RESPONSIVE MODE */
 
