--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,8 @@ h3 { font-size: var(--fs-h3); }
 
 .nav {
     position: fixed;
-    background: var(--clr-dark);
+    /* background: var(--clr-dark); */
+    background: var(--clr-blue);
     color: var(--clr-light);
     top: 0;
     bottom: 0;
