--- a/css/style.css
+++ b/css/style.css
@@ -522,6 +522,7 @@ strong {
 
 .services--title::after {
     opacity: 0.7;
+    margin: 1em auto 1em;
 }
 
 .work-btn {
@@ -539,7 +540,7 @@ strong {
         "img";
     grid-template-columns: 1fr;
     grid-column-gap: 0;
-    row-gap: 2em;
+    row-gap: 1em;
     width: 100%;
 }
 
@@ -550,7 +551,7 @@ strong {
 .profile--subtitle {
     width: 90%;
     padding: .5em 1em;
-    margin: auto;
+    margin: .5em auto 1em auto;
 }
 
 .profile--body {
