--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,12 @@ h3 { font-size: var(--fs-h3); }
     display: flex;
     justify-content: space-between;
     padding: 1em 2em;
+    position: fixed;
+    min-height: 75px;
+    top: 0;
+    background-color: var(--clr-light);
+    width: 100%;
+    margin-bottom: 140px;
 }
 
 .logo {
@@ -207,10 +213,11 @@ h3 { font-size: var(--fs-h3); }
 /* Intro Section */
 
 .intro-section {
-    position: relative;
+    /* position: relative; */
     display: grid;
     width: min-content;
     margin: 0 auto;
+    margin-top: 80px;
     grid-column-gap: 2em;
     grid-template-areas: 
         "img intro--title"
@@ -221,8 +228,8 @@ h3 { font-size: var(--fs-h3); }
 .intro--img {
     grid-area: img;
     min-width: 250px;
-    position: relative;
-    z-index: 2;
+    /* position: relative; */
+    /* z-index: 2; */
     box-shadow: var(--bs);
 }
 
@@ -232,6 +239,7 @@ strong {
 }
 
 .intro--subtitle {
+    z-index: -1;
     align-self: start;
     grid-column: -1 / 1;
     grid-row: 2;
@@ -275,7 +283,7 @@ strong {
 
 .services--title {
     color: var(--clr-green);
-    position: relative;
+    /* position: relative; */
 }
 
 .services--title::after {
@@ -285,12 +293,13 @@ strong {
     height: 2px;
     margin: 0.5em auto 1em;
     background: var(--clr-light);
-    opacity: 0.5;
+    background: var(--clr-green);
+    /* opacity: 0.5; */
 }
 
 .work-btn {
     display: inline-block;
-    padding: .5em 2.5em;
+    padding: 1em 2.5em;
     background: var(--clr-green);
     color: var(--clr-black);
     text-decoration: none;
@@ -322,8 +331,8 @@ strong {
 .profile-img {
     grid-area: img;
     box-shadow: var(--bs);
-    position: relative;
-    z-index: 2;
+    /* position: relative; */
+    /* z-index: 2; */
 }
 
 .profile--title {
@@ -333,6 +342,7 @@ strong {
 }
 
 .profile--subtitle {
+    z-index: -1;
     grid-area: subtitle;
     grid-column: 1 / -1;
     grid-row: 2;
@@ -521,7 +531,7 @@ strong {
 }
 
 .services--title::after {
-    opacity: 0.7;
+    /* opacity: 0.7; */
     margin: 1em auto 1em;
 }
 
