--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,16 @@
-/* Fonts */
+/* FONTS */
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&family=Roboto+Slab:wght@300;400;500;600;700;900&display=swap');
 
-/* Box Sizing */
+
+/* BOX SIZING */
 *, 
 *::before, 
 *::after {
     box-sizing: border-box;
 }
 
-/* Custom Properties */
+
+/* CUSTOM PROPERTIES */
 
 :root {
     --ff-roboto-slab: 'Roboto Slab', serif;
@@ -35,7 +37,8 @@
           0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
 
-/* General Styles */
+
+/* GENERAL STYLES */
 
 html {
     scroll-behavior: smooth;
@@ -64,7 +67,8 @@ img {
     outline-offset: 3px;
 }
 
-/* Typography */
+
+/* TYPOGRAPHY */
 
 h1, 
 h2, 
@@ -99,18 +103,17 @@ h3 { font-size: var(--fs-h3); }
     font-weight: var(--fw-light);
 }
 
-/* Header Section */
+
+/* HEADER SECTION */
 
 .header-section {
     display: flex;
     justify-content: space-between;
     padding: 1em 2em;
     position: fixed;
-    min-height: 75px;
     top: 0;
     background-color: var(--clr-light);
     width: 100%;
-    margin-bottom: 140px;
 }
 
 .logo {
@@ -191,7 +194,6 @@ h3 { font-size: var(--fs-h3); }
 .hamburger,
 .hamburger::before,
 .hamburger::after {
-    /* background: var(--clr-dark); */
     background: var(--clr-green);
     width: 2em;
     height: 3px;
@@ -210,14 +212,14 @@ h3 { font-size: var(--fs-h3); }
 .hamburger::before { top: 6px; }
 .hamburger::after { bottom: 6px; }
 
-/* Intro Section */
+
+/* INTRO SECTION */
 
 .intro-section {
     /* position: relative; */
     display: grid;
     width: min-content;
-    margin: 0 auto;
-    margin-top: 80px;
+    margin: 5em auto 0 auto;
     grid-column-gap: 2em;
     grid-template-areas: 
         "img intro--title"
@@ -228,8 +230,6 @@ h3 { font-size: var(--fs-h3); }
 .intro--img {
     grid-area: img;
     min-width: 250px;
-    /* position: relative; */
-    /* z-index: 2; */
     box-shadow: var(--bs);
 }
 
@@ -252,7 +252,8 @@ strong {
     letter-spacing: .35rem;
 }
 
-/* Services Section */
+
+/* SERVICES SECTION */
 
 .services-section {
     background-color: var(--clr-blue);
@@ -271,10 +272,6 @@ strong {
     margin: auto auto 4em auto;
 }
 
-/* .service + .service {
-    margin-left: 2em;
-} */
-
 .service {
     flex-basis: 0;
     flex-grow: 1;
@@ -283,7 +280,6 @@ strong {
 
 .services--title {
     color: var(--clr-green);
-    /* position: relative; */
 }
 
 .services--title::after {
@@ -294,7 +290,6 @@ strong {
     margin: 0.5em auto 1em;
     background: var(--clr-light);
     background: var(--clr-green);
-    /* opacity: 0.5; */
 }
 
 .work-btn {
@@ -314,7 +309,8 @@ strong {
     transform: scale(1.1);
 }
 
-/* Profile Section */
+
+/* PROFILE SECTION */
 
 .profile-section {
     display: grid;
@@ -331,8 +327,6 @@ strong {
 .profile-img {
     grid-area: img;
     box-shadow: var(--bs);
-    /* position: relative; */
-    /* z-index: 2; */
 }
 
 .profile--title {
@@ -356,7 +350,8 @@ strong {
     padding: 0 2em;
 }
 
-/* Portfolio Section */
+
+/* PORTFOLIO SECTION */
 
 .portfolio-section {
     background-color: var(--clr-blue);
@@ -399,7 +394,7 @@ strong {
     opacity: .5;
 }
 
-/* Footer Section */
+/* FOOTER SECTION */
 
 .footer {
     background: #111;
@@ -431,7 +426,7 @@ strong {
     list-style: none;
     display: flex;
     justify-content: center;
-    margin: 2em 0 0;
+    margin: 1em 0 0;
     padding: 0;
 }
 
@@ -454,13 +449,15 @@ strong {
         --fs-body: 1.2rem;
     }
 
-/* General Styles */
+
+/* GENERAL STYLES */
 
     section {
         padding: 5em 2em;
     }
 
-/* Typography */
+
+/* TYPOGRAPHY */
 
 .section-title {
     margin-bottom: .25em;
@@ -471,7 +468,8 @@ strong {
     text-align: center;
 }
 
-/* Header Section */
+
+/* HEADER SECTION */
 
 .header-section {
     padding: 1em;
@@ -482,7 +480,8 @@ strong {
     margin-left: .3em;
 }
 
-/* Intro Section */
+
+/* INTRO SECTION */
 
 .intro-section {
     display: flex;
@@ -490,7 +489,7 @@ strong {
     align-items: center;
     justify-content: center;
     width: 100%;
-    margin: auto;
+    margin: 5em auto auto auto;
     padding-top: 2em;
 }
 
@@ -510,7 +509,8 @@ strong {
     margin: auto;
 }
 
-/* Services Section */
+
+/* SERVICES SECTION */
 
 .services-section {
     margin-bottom: 0;
@@ -541,7 +541,8 @@ strong {
     background: var(--clr-green-light);
 }
 
-/* Profile Section */
+
+/* PROFILE SECTION */
 
 .profile-section {
     grid-template-areas: 
@@ -568,7 +569,8 @@ strong {
     padding: 0 1em;
 }
 
-/* Portfolio Section */
+
+/* PORTFOLIO SECTION */
 
 .portfolio--subtitle {
     margin-bottom: 1.5em;
@@ -580,15 +582,12 @@ strong {
     margin: auto;
 }
 
-/* Footer Section */
+
+/* FOOTER SECTION */
 
 .footer {
     font-size: var(--fs-body);
     color: var(--clr-green-light);
-}
-
-.social-list {
-    margin: 1em 0 0;
 }
 
 }
