--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ h3 { font-size: var(--fs-h3); }
     transition: transform 250ms cubic-bezier(.5, 0, .5, 1);
 }
 
-nav--item_work {
+.nav--item_work {
     display: none;
 }
 
