--- a/css/style.css
+++ b/css/style.css
@@ -298,7 +298,7 @@ strong {
 
 .work-btn {
     /* display: inline-block; */
-    display: hidden;
+    display: none;
     padding: 1em 2.5em;
     background: var(--clr-green);
     color: var(--clr-black);
